# ryan-game-record

./: main.py  models.py  pyproject.toml
static/: style.css
templates/: base.html  index.html  login.html
templates/admin/: games.html  user_form.html  users.html
templates/records/: form.html  list.html
