[project]
name = "game-record"
version = "0.1.0"
description = "Daily game time tracker"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy>=2.0",
    "bcrypt>=4.0",
    "itsdangerous>=2.0",
    "python-multipart>=0.0.9",
    "jinja2>=3.1",
]

[tool.uv]
dev-dependencies = []
